<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.bfreuden</groupId>
    <artifactId>constat-photo</artifactId>
    <version>1.0-SNAPSHOT</version>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <junit.version>5.8.1</junit.version>
        <javafx.version>22</javafx.version>
        <javafx.maven.plugin.version>0.0.8</javafx.maven.plugin.version>
        <maven.compiler.plugin.version>3.8.1</maven.compiler.plugin.version>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <maven.compiler.release>21</maven.compiler.release>
        <maven.plugin.validation>VERBOSE</maven.plugin.validation>
        <native.maven.plugin.version>0.10.3</native.maven.plugin.version>
        <local.repository>${user.home}/.m2/repository</local.repository>
        <imageName>constat-photo</imageName>
    </properties>

    <dependencies>
        <!-- EXIF metadata -->
        <dependency>
            <groupId>com.drewnoakes</groupId>
            <artifactId>metadata-extractor</artifactId>
            <version>2.19.0</version>
        </dependency>
        <!-- JavaFX -->
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-base</artifactId>
            <version>${javafx.version}</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>${javafx.version}</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-fxml</artifactId>
            <version>${javafx.version}</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-swing</artifactId>
            <version>${javafx.version}</version>
        </dependency>
        <!-- JavaFX Misc -->
        <dependency>
            <groupId>org.controlsfx</groupId>
            <artifactId>controlsfx</artifactId>
            <version>11.2.1</version>
        </dependency>
        <dependency>
            <groupId>com.dlsc.formsfx</groupId>
            <artifactId>formsfx-core</artifactId>
            <version>11.6.0</version>
            <exclusions>
                <exclusion>
                    <groupId>org.openjfx</groupId>
                    <artifactId>*</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>org.kordamp.bootstrapfx</groupId>
            <artifactId>bootstrapfx-core</artifactId>
            <version>0.4.0</version>
        </dependency>
        <dependency>
            <groupId>org.fxmisc.flowless</groupId>
            <artifactId>flowless</artifactId>
            <version>0.7.3</version>
        </dependency>
        <dependency>
            <groupId>org.fxmisc.wellbehaved</groupId>
            <artifactId>wellbehavedfx</artifactId>
            <version>0.3.3</version>
        </dependency>
        <dependency>
            <groupId>org.fxmisc.undo</groupId>
            <artifactId>undofx</artifactId>
            <version>2.1.1</version>
        </dependency>
<!--        <dependency>-->
<!--            <groupId>org.apache.logging.log4j</groupId>-->
<!--            <artifactId>log4j-core</artifactId>-->
<!--            <version>2.24.3</version>-->
<!--        </dependency>-->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>5.12.0</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <profiles>
        <profile>
            <id>windows</id>
            <activation>
                <os>
                    <family>windows</family>
                </os>
            </activation>
            <properties>
                <target.os>win</target.os>
            </properties>
        </profile>
        <profile>
            <id>linux</id>
            <activation>
                <os>
                    <family>unix</family>
                </os>
            </activation>
            <properties>
                <target.os>linux</target.os>
            </properties>
        </profile>
        <profile>
            <id>native</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.graalvm.buildtools</groupId>
                        <artifactId>native-maven-plugin</artifactId>
                        <version>${native.maven.plugin.version}</version>
                        <executions>
                            <execution>
                                <id>build-native</id>
                                <goals>
                                    <goal>compile-no-fork</goal>
                                </goals>
                                <phase>package</phase>
                                <configuration>
                                    <buildArgs>
                                        <arg>-H:+AddAllCharsets</arg>
                                        <arg>--initialize-at-build-time=java.util.logging</arg>
                                    </buildArgs>
                                </configuration>
                            </execution>
<!--                            <execution>-->
<!--                                <id>test-native</id>-->
<!--                                <goals>-->
<!--                                    <goal>test</goal>-->
<!--                                </goals>-->
<!--                                <phase>test</phase>-->
<!--                            </execution>-->
                        </executions>
                        <configuration>
                            <verbose>true</verbose>
                            <skip>false</skip>
                            <imageName>${imageName}</imageName>
                            <fallback>false</fallback>
                            <agent>
                                <enabled>false</enabled>
                            </agent>
                            <buildArgs>
                                <buildArg>--module-path target/${imageName}-${version}.jar</buildArg>
                                <buildArg>-Ob</buildArg>
                                <buildArg>-march=native</buildArg>
                                <buildArg>--initialize-at-build-time=org.bfreuden.docxgen.Main</buildArg>
                                <buildArg>--initialize-at-build-time=org.bfreuden.docxgen.DocumentGenerator</buildArg>
                                <buildArg>--add-modules org.bfreuden.docxgen</buildArg>
                                <buildArg>--add-modules javafx.base,javafx.graphics,javafx.fxml,javafx.controls,javafx.swing,java.logging,metadata.extractor</buildArg>

                                <buildArg>--module org.bfreuden.docxgen/org.bfreuden.docxgen.Main</buildArg>

                                <buildArg>--module-path ${local.repository}/org/openjfx/javafx-base/22/javafx-base-22-${target.os}.jar</buildArg>
                                <buildArg>--module-path ${local.repository}/org/openjfx/javafx-graphics/22/javafx-graphics-22-${target.os}.jar</buildArg>
                                <buildArg>--module-path ${local.repository}/org/openjfx/javafx-controls/22/javafx-controls-22-${target.os}.jar</buildArg>
                                <buildArg>--module-path ${local.repository}/org/openjfx/javafx-fxml/22/javafx-fxml-22-${target.os}.jar</buildArg>
                                <buildArg>--module-path ${local.repository}/org/openjfx/javafx-swing/22/javafx-swing-22-${target.os}.jar</buildArg>

                                <buildArg>--module-path ${local.repository}/org/controlsfx/controlsfx/11.2.1/controlsfx-11.2.1.jar</buildArg>
                                <buildArg>--module-path ${local.repository}/com/dlsc/formsfx/formsfx-core/11.6.0/formsfx-core-11.6.0.jar</buildArg>
                                <buildArg>--module-path ${local.repository}/org/kordamp/bootstrapfx/bootstrapfx-core/0.4.0/bootstrapfx-core-0.4.0.jar</buildArg>
                                <buildArg>--module-path ${local.repository}/org/fxmisc/flowless/flowless/0.7.3/flowless-0.7.3.jar</buildArg>
                                <buildArg>--module-path ${local.repository}/org/fxmisc/wellbehaved/wellbehavedfx/0.3.3/wellbehavedfx-0.3.3.jar</buildArg>
                                <buildArg>--module-path ${local.repository}/org/fxmisc/undo/undofx/2.1.1/undofx-2.1.1.jar</buildArg>
                                <buildArg>--module-path ${local.repository}/com/drewnoakes/metadata-extractor/2.19.0/metadata-extractor-2.19.0.jar</buildArg>
                                <buildArg>--module-path ${local.repository}/com/adobe/xmp/xmpcore/6.1.11/xmpcore-6.1.11.jar</buildArg>
                            </buildArgs>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
                <configuration>
                    <source>${maven.compiler.source}</source>
                    <target>${maven.compiler.source}</target>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.4.2</version>
            </plugin>
        </plugins>
    </build>

</project>
